painting character result: name, img, nickname and status

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -2,13 +2,22 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Adalab Web Starter Kit</title>
+	<title>BreakingBad Searcher</title>
   <link rel="icon" href="favicon.png"/>
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-  <div class="page">
+  <div class="page__app">
+    <div class="container__search">
+      <h1>Busta tu personaje favorito de Breacking-Bad!</h1>
+      <input type="text" class="input__Search" placeholder="Nombre completo">
+      <button class="btn__search">Buscar mi BlueMeth!</button>
+    </div>
+    <div class="results__container">
+      <ul class="results__list">
 
+      </ul>
+    </div>
   </div>
   <script src="assets/js/main.js"></script>
 </body>
