--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -2,7 +2,6 @@
 
 
 body {
-	background: url('../images/logo-adalab-80px.png') center center no-repeat $color-white;
-	margin: 0;
+	background: $color-white;
 	height: 100vh;
 }
