fixing main title :)

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="page__app">
     <div class="container__search">
-      <h1>Busta tu personaje favorito de Breacking-Bad!</h1>
+      <h1>Busca tu personaje favorito de Breacking-Bad!</h1>
       <input type="text" class="input__Search" placeholder="Nombre completo">
       <button class="btn__search">Buscar mi BlueMeth!</button>
     </div>
